# POLARIS_GEM_e2

./: README.md  respawn_clean.sh  status.sh
gem_lane_keeping/: CMakeLists.txt  package.xml
gem_lane_keeping/scripts/: vision_lka.py
gem_nav/: CMakeLists.txt  package.xml
gem_nav/scripts/: model_states_to_odom.py  task_planner.py
polaris_gem_simulator/gem_simulator/gem_core/: CMakeLists.txt  package.xml
polaris_gem_simulator/gem_simulator/gem_core/msg/: Health.msg  RobotState.msg
polaris_gem_simulator/gem_simulator/gem_core/scripts/: controller_mux.py  health_sim.py  pure_pursuit.py  supervisor.py
polaris_gem_simulator/gem_simulator/gem_description/urdf/: gem.gazebo  gem.urdf.xacro
polaris_gem_simulator/gem_simulator/gem_gazebo/config/: track_waypoints.csv
polaris_gem_simulator/gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch
polaris_gem_simulator/gem_simulator/gem_gazebo/scripts/: gem_control.py
