<?xml version="1.0"?>
<package format="2">
  <name>gem_core</name>
  <version>0.0.1</version>
  <description>Core supervisor and controller mux for GEM Polaris E2</description>
  <maintainer email="evgeniyy.dushkin@gmail.com"> Evgenii Dushkin </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>ackermann_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
